- Place successor proposal button next to workflow buttons. [Kevin Bieri]
- Remove document tooltip on touch devices. [Kevin Bieri]
- Respect ISharingConfiguration black- and white_list_prefix for selectable groups in add-team form. [elioschmutz]
- Restrict selectable orgunits on add-team form to orgunits of the current adminunit only. [elioschmutz]
- Update ftw.tabbedview to 4.1.2. [Kevin Bieri]
- Fix dispatching notifications while recording a TaskReminderActivity. [elioschmutz]
- Prefill task-reminder select field on task response form. [elioschmutz]
- Use the same template for default notifiaction email like the daily-digest template. [elioschmutz]
- Update cached docprops on docprops updates. [Rotonen]
- Make sure our Diazo theme doesn't drop data-base-url attribute. [lgraf]
- Bump Plone version to 4.3.18. [Rotonen, lgraf]
- Fix bug with document showroom for sablon and proposal templates. [njohner]
- Restrict TaskQueries according to the task principals. [phgross]
- Bump ftw.solr to 2.3.0 to get patched (optimized) reindexObjectSecurity(). [lgraf]
- Implement asynchronous meeting zip generation, with PDFs from the new demand endpoint. [deiferni, lgraf]
- Add new icon for private folder. [njohner]
- Allow pasting templates into template folders. [Rotonen]
- Fix circular imports after using generate_remind_notifications_zopectl_handler entrypoint. [elioschmutz]
- Map gever_admins to the administrator_group in example content. [njohner]
- Style live search to match other dropdown menus. [njohner]
- OGGBundle: Fix encoding issue with UNC filepaths containing non-ASCII characters. [lgraf]
- Send notification dispatch exceptions to Raven. [Rotonen]
- Do not present the paste UI to users without 'Copy or Move' on the target. [Rotonen]
- Disallow agency-support for private tasks. [elioschmutz]
- Update task-added activity summary for private tasks. [elioschmutz]
- Add is_private field for tasks. [elioschmutz]