@@ -3,25 +3,21 @@ from opengever.document.subscribers import set_digitally_available
 from opengever.ech0147.mappings import INV_CLASSIFICATION_MAPPING
 from opengever.ech0147.mappings import INV_PRIVACY_LAYER_MAPPING
 from opengever.ech0147.mappings import INV_PUBLIC_TRIAL_MAPPING
+from opengever.ech0147.serializer import ECH0147Serializer
 from plone.restapi.interfaces import IDeserializeFromJson
-from pyxb.binding.datatypes import date as pyxb_date
 from random import randint
 from zope.component import queryMultiAdapter
 from zope.container.interfaces import INameChooser
 from zope.event import notify
 from zope.lifecycleevent import ObjectModifiedEvent
+import json
 import os.path
 import transaction
 
 
-def convert_dates(data):
-    """convert pyxb dates to real python datetime dates, otherwise field
-    validation for date fields will raise.
-    """
-
-    for key, value in data.items():
-        if isinstance(value, pyxb_date):
-            data[key] = value.date()
+def sanitize_metadata(metadata):
+    """We do a JSON serialization cycle to get rid of any XML data types."""
+    return json.loads(json.dumps(metadata, cls=ECH0147Serializer), cls=ECH0147Serializer)
 
 
 def create_dossier(container, dossier, zipfile, responsible):
@@ -54,11 +50,8 @@ def create_dossier(container, dossier, zipfile, responsible):
         metadata['comments'] = u'\n'.join(
             [k.value() for k in dossier.comments.comment])
 
-    convert_dates(metadata)
-
-    deserializer = queryMultiAdapter((obj, obj.REQUEST),
-                                     IDeserializeFromJson)
-    deserializer(validate_all=True, data=metadata, create=True)
+    deserializer = queryMultiAdapter((obj, obj.REQUEST), IDeserializeFromJson)
+    deserializer(validate_all=True, data=sanitize_metadata(metadata), create=True)
 
     # Rename dossier
     chooser = INameChooser(container)
@@ -107,11 +100,8 @@ def create_document(container, document, zipfile):
     if document.keywords:
         metadata['keywords'] = [k.value() for k in document.keywords.keyword]
 
-    convert_dates(metadata)
-
-    deserializer = queryMultiAdapter((obj, obj.REQUEST),
-                                     IDeserializeFromJson)
-    deserializer(validate_all=True, data=metadata, create=True)
+    deserializer = queryMultiAdapter((obj, obj.REQUEST), IDeserializeFromJson)
+    deserializer(validate_all=True, data=sanitize_metadata(metadata), create=True)
 
     if document.files:
         file_ = document.files.file[0]
